tests/common/compile-error/03_rust_string_passthrough.frs
@@target rust

// NEGATIVE TEST: Frame must NOT wrap native `"hello"` in
// `String::from(...)` to make it match a `String` return type.
// Author wrote bare `"hello"` in a handler whose return type is
// Frame's `str` (→ Rust `String`). rustc should reject with
// E0308 (mismatched types: expected `String`, found `&str`).
//
// If this test starts PASSING the native compiler (i.e., the code
// compiles), framec has silently begun rewriting string literals
// to paper over the author's choice — a regression against the
// native-passthrough architecture.

@@system NegRustString {
    interface:
        probe(): str

    machine:
        $Ready {
            probe(): str {
                return "hello"
            }
        }
}

fn main() {}
